Fixed register button alignment

--- a/source/components/home/navigation/styles.scss
+++ b/source/components/home/navigation/styles.scss
@@ -1,5 +1,5 @@
 .Navigation {
-    $nav-height: 10vh;
+    $nav-height: 8vh !important;
     height: $nav-height;
     position: -webkit-sticky;
     position: sticky;
@@ -15,13 +15,13 @@
         .nav>li>a {
             color: #ffff;
             font-size: 1em;
-            font-family: 'Roboto Slab', serif;
+            font-family: 'Roboto', sans-serif !important;
             line-height: $nav-height;
             text-transform: uppercase;
             letter-spacing: 0.5px;
             padding-top: 0;
             padding-bottom: 0;
-            font-weight: bold;
+            font-weight: 50 !important;
             opacity: 1;
         }
         .nav>li>a:hover {
@@ -31,11 +31,16 @@
         }
     }
     &__logo {
-        width: 7.5vh !important;
+        width: 5.5vh !important;
         position: absolute;
         top: 50%;
+        left: 5%;
         transform: translateY(-50%) !important;
     }
+}
+
+.regbutton {
+    margin-top: 17%;
 }
 
 @media(min-width: 768px) and (max-width:1024px) {
